--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-pandas
-flask
-numpy
-requests
-textblob
-gunicorn
-python-dotenv
+# Core dependencies
+flask>=2.3.0
+gunicorn>=21.2.0
+python-dotenv>=1.0.0
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# NLP and ML
+textblob>=0.17.1
+sentence-transformers>=2.2.0
+scikit-learn>=1.3.0
+torch>=2.0.0
+
+# Optional - LLM integration
+openai>=1.0.0
+
+# Utilities
+requests>=2.31.0
